# AI-Workbench

./: .env.example  .gitignore  CLAUDE.md  DOCKER_INFRA.md  DOCKER_LITELLM.md  DOCKER_UNSLOTH.md  DOCKER_VLLM.md  LITELLM_MCP.md  Makefile  README.md  USAGE_WIDGET.md  chrome_launcher.py  claude_usage_widget.py  pyproject.toml  usage_popup.py
.claude/: settings.local.json
ai/: AI_INFRA.md  Dockerfile.kokoro-api  Dockerfile.kokoro-app  Dockerfile.litellm  GPU_SHARING_GUIDE.md  KOKORO.md  LITELLM_MCP.md  MADLAD.md  OAUTH2_PROXY.md  OPENWEBUI.md  VLLM.md  docker-compose.classifier.yml  docker-compose.cloudflared.yml  docker-compose.kokoro.yml  docker-compose.litellm.yml  docker-compose.oauth2-proxy.yml  docker-compose.openwebui.yml  docker-compose.quality-checker.yml  docker-compose.unsloth.yml  docker-compose.vllm.yml  docker-compose.yml  litellm_config.yaml  prometheus.yml  requirements-kokoro.txt
ai/classifier/: API.md  Dockerfile  analysis.py  config.py  cv.py  llm.py  logger.py  main.py  middleware.py  models.py  pyproject.toml  scoring.py  ssrf.py  store.py  utils.py  workers.py
ai/kokoro/: app.py  kokoro_server.py
ai/madlad/app/: app.py  pyproject.toml
ai/quality-checker/: API.md  Dockerfile  analysis.py  config.py  cv.py  llm.py  logger.py  main.py  models.py  quality_checker.py  scoring.py
claude_observer/: __main__.py  config.py  logging_setup.py
claude_observer/browser/: cdp_client.py  cdp_spy.py  chrome_launcher.py  fetcher.py  interceptor.js  (+1 more)
docs/: UNSLOTH.md
scripts/: launch_unsloth.sh
widget/: USAGE_WIDGET.md  test_phoenix_spy.py
(+20 files in other folders)
